[gd_scene load_steps=12 format=3 uid="uid://dvj0cw2q7tuc8"]

[ext_resource type="FontFile" uid="uid://c0ldfqt1w81w3" path="res://Assets/Hud/Font/Planes_ValMore.ttf" id="1_0tcya"]
[ext_resource type="Texture2D" uid="uid://ca2hw1b00aqgf" path="res://Assets/Hud/2 Bars/scroll-removebg-preview 3.png" id="1_2ly3o"]
[ext_resource type="Script" path="res://Scenes/Menu/hud.gd" id="1_tlgor"]
[ext_resource type="Texture2D" uid="uid://dhkle314xl01o" path="res://Assets/Hud/2 Bars/gem_ruby.png" id="2_8slar"]
[ext_resource type="Texture2D" uid="uid://daqs3en4p0qc" path="res://Assets/Hud/2 Bars/Healthbar_full.png" id="3_553gn"]
[ext_resource type="Texture2D" uid="uid://bnpye43ggof0t" path="res://Assets/Hud/2 Bars/Healthbar_empty.png" id="4_wu6wl"]
[ext_resource type="Texture2D" uid="uid://kw4vxa5ebik8" path="res://Assets/Hud/2 Bars/gem_emerald.png" id="5_6b1ar"]
[ext_resource type="Texture2D" uid="uid://bwd0pdoipjony" path="res://Assets/Hud/2 Bars/gem_sapphire.png" id="6_424iy"]
[ext_resource type="Texture2D" uid="uid://cqntkn3ih4uh1" path="res://Assets/Hud/2 Bars/Slider.png" id="6_a7005"]
[ext_resource type="Texture2D" uid="uid://cka01lmmivk62" path="res://Assets/Characters/portraits-pixel-art-assets-pack/1 Portraits/Icons_01.png" id="7_ltr5w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y0rnl"]
bg_color = Color(0, 0, 0, 0.258824)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_tlgor")

[node name="Control" type="Panel" parent="."]
offset_right = 391.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxFlat_y0rnl")
metadata/_edit_use_anchors_ = true

[node name="Scrolls" type="TextureRect" parent="."]
offset_left = 178.0
offset_top = 19.0
offset_right = 225.0
offset_bottom = 60.0
texture = ExtResource("1_2ly3o")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="x" type="Label" parent="Scrolls"]
offset_left = 44.0
offset_top = 14.0
offset_right = 84.0
offset_bottom = 37.0
theme_override_fonts/font = ExtResource("1_0tcya")
text = "x"
metadata/_edit_use_anchors_ = true

[node name="gems" type="TextureRect" parent="."]
offset_left = 275.0
offset_top = 33.0
offset_right = 306.0
offset_bottom = 57.0
texture = ExtResource("5_6b1ar")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="x" type="Label" parent="gems"]
offset_left = 54.0
offset_top = 2.0
offset_right = 94.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("1_0tcya")
text = "x"
metadata/_edit_use_anchors_ = true

[node name="gem2" type="TextureRect" parent="gems"]
offset_left = 11.0
offset_top = -13.0
offset_right = 41.0
offset_bottom = 15.0
texture = ExtResource("6_424iy")
expand_mode = 1
flip_v = true
metadata/_edit_use_anchors_ = true

[node name="gem3" type="TextureRect" parent="gems"]
offset_left = 19.0
offset_top = -1.0
offset_right = 57.0
offset_bottom = 27.0
texture = ExtResource("2_8slar")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="countGem" type="Label" parent="."]
anchors_preset = -1
anchor_right = 1.392
anchor_bottom = 0.479
offset_left = 341.0
offset_top = 32.0
offset_right = 337.848
offset_bottom = 50.504
theme_override_fonts/font = ExtResource("1_0tcya")
theme_override_font_sizes/font_size = 26
text = "##"
metadata/_edit_use_anchors_ = true

[node name="countScroll" type="Label" parent="."]
offset_left = 234.0
offset_top = 31.0
offset_right = 274.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("1_0tcya")
theme_override_font_sizes/font_size = 26
text = "##"
metadata/_edit_use_anchors_ = true

[node name="HealthFull" type="TextureRect" parent="."]
offset_left = 69.0
offset_top = 28.0
offset_right = 184.0
offset_bottom = 41.0
texture = ExtResource("3_553gn")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="HealthEmpty" type="TextureRect" parent="."]
offset_left = 69.0
offset_top = 28.0
offset_right = 184.0
offset_bottom = 41.0
texture = ExtResource("4_wu6wl")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Circle" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.431373)
self_modulate = Color(1, 1, 1, 0.517647)
offset_top = 13.0
offset_right = 65.0
offset_bottom = 69.0
texture = ExtResource("6_a7005")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Portrait" type="TextureRect" parent="."]
offset_left = 3.0
offset_top = 15.0
offset_right = 62.0
offset_bottom = 57.0
texture = ExtResource("7_ltr5w")
expand_mode = 1
metadata/_edit_use_anchors_ = true
